* SVN *

* big change to templates - store current site template in the Site db record.  Store templates in /themes/site-#{id}/*.  
  no more current/other/rollback bs.

* recognize swf files in themes

* Default theme is now Simpla (http://demo.ifelse.co.uk/index.php?wptheme=Simpla)

* Implement movable type xml-rpc API [Moritz Angermann]

* Enhance error recovery in the wordpress converter [Chris Petrilli]

* Fix Site#tags query to return distinct tags [DeLynn Berry]

* Simplify and properly test admin/article permissions for non-admins.

* Change child_section and descendent_section methods in the SiteDrop to search the preloaded sections array.

* Added global mode var to all templates to check what mode you're in: section, single, page, archive, search, tag

* Remove any notion of a template hierarchy, and the page template itself.  Paged sections now default to the 'single' template.

* Added {{ mode }} so you can check what 'view' you're in.  
  
  {% unless mode == 'single' %} Read more {% endunless %}
  
* Ensure templates are sorted by name [Brian Chapados]

* Fix bug that was caching redirected routes.  

* fix wordpress converter bug, set default email on invalid comments. [Hampton Catlin]

* change time delta so the end date is one second earlier, so a search doesn't include the articles on the next month.  [Jon Leighton]

* use precise time methods when calculating time deltas [Jon Leighton]

* remove .svn dirs when copying default them [Cristi Balan]

* Added linked_tag_list(article, separator).  Use like linked_section_list.

* Enhanced the theme preview slightly

* Changed some wording on moderate comments area 

* Added linked_section_list(article, separator)
  
  Pass in an article and it will return that articles sections all linked up.
  {{ article | linked_section_list }}
  {{ article | linked_section_list: ' and ' }}

* 0.7.0 PRE-RELEASE *

* Removed archive.liquid and index.liquid fallbacks

* NEW FEATURE: Redirections (see environment.rb)
