@@ -4,6 +4,7 @@
   <ul id="act-nav" class="clear">
   <% if admin? || @article.user_id == current_user.id -%>
     <li><%= link_to_remote 'Delete this article', :url => {:action => 'destroy', :id => @article}, :confirm => 'Are you sure you want to delete this article?' %></li>
+    <li><%= link_to 'Close comments for this article', '' %></li>
   <% end -%>
   <% if controller.action_name == 'edit' -%>
     <li><%= link_to('Preview', {:action => 'show', :id => @article}, {:target => '_blank'}) %></li>
